Fix body overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -119,11 +119,15 @@ footer {
   text-align: center;
 }
 
-.grid div img,
-.distortion {
+.grid div img {
   width: 100%;
   height: 100%;
   min-height: 50vh;
+}
+
+.distortion-1,
+.distortion-2 {
+  min-width: 100%;
 }
 
 .subgrid {
@@ -578,6 +582,10 @@ input[type="submit"]:active {
 
   .slogan {
     font-size: 1.5em;
+  }
+
+  .subgrid p {
+    font-size: 0.9em;
   }
 
   .footer {
